# exor

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  run.rs
src/cli/: util.rs
src/command/: generate.rs  mod.rs  shell.rs  traits.rs
src/inventory/: machines.rs  mod.rs
src/system/: connection.rs  mod.rs  run.rs
tests/exor/: utils.rs
