[package]
name = "exor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "exor"
path = "src/main.rs"
