[package]
name = "exor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
clap = { version = "4.5.39", features = ["derive"] }
quinn = "0.11.9"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "exor"
path = "src/main.rs"
